--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body ng-controller="sprayctrl">
 <form><input type="text" ng-model="test"></form>
+{{test}}
 <div class="container" id="uiview" ui-view=""></div>
 <script src=
 "https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js">
