--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html ng-app="spray">
 <head>
-<link rel="stylesheet" href=
-"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" href=
-"https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/6.1.5/bootstrap-slider.js">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/6.1.5/bootstrap-slider.js">
 <link rel="stylesheet" href="/style.css">
 <meta charset="utf-8">
 <title>SprayOn</title>
 </head>
 <body ng-controller="sprayctrl">
-<form><input type="text" ng-model="test"></form>
-{{test}}
-<div class="container" id="uiview" ui-view=""></div>
-<script src=
-"https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js">
-</script>
-<script src="./js/app.js">
-</script>
-<script src="./js/controller.js">
-</script>
+<ui-view></ui-view>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+
+
+<script src="./js/app.js"></script>
+<script src="./js/controller.js"></script>
 </body>
 </html>
