finished all but contact and projects

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <li><a ui-sref="performingarts">Utah Performing Arts Center</a></li>
             </ul>
           <li><a ui-sref="contact">Contact Us</a></li>
+          <li style="float:right"><a ui-sref="contact">(435) 884-6708</a></li>
 </li>
         </ul>
       </div>
